Bug #8479
nvmeadm doesn't handle namespaces with EUI64
Start date:
2017-07-10
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
There's an issue with nvmeadm and namespaces having an EUI64. While nvmeadm can list them, it doesn't accept them as arguments:
# nvmeadm list nvme0: model: HUSMR7616BDP301, serial: SDM000000195, FW rev: KNGND070, NVMe v1.2 nvme0/000cca0b0100ec80 (c1t000CCA0B0100EC80d0): Size = 1526185 MB, Capacity = 1526185 MB, Used = 1526185 MB nvme0/2 (unattached): Size = 0 MB, Capacity = 0 MB, Used = 0 MB nvme0/3 (unattached): Size = 0 MB, Capacity = 0 MB, Used = 0 MB nvme0/4 (unattached): Size = 0 MB, Capacity = 0 MB, Used = 0 MB … # nvme identify nvme/000cca0b0100ec80 nvmeadm: invalid namespace 000cca0b0100ec80
Updated by Hans Rosenfeld over 3 years ago
Webrev: https://grumpf.hope-2000.org/illumos-8479/
Testing: I tested this by faking a EUI64 on the Samsung SM951 device that I have. The EUI64 can be passed as part of an argument to nvmeadm. I also asked Pete Shephard, who reported this bug to me, to test it on real hardware.
This has been in illumos-joyent since July.
Updated by Electric Monk over 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit c6e58d8c85cf3e5d0db157501b40276eb59edf16
commit c6e58d8c85cf3e5d0db157501b40276eb59edf16 Author: Hans Rosenfeld <hans.rosenfeld@joyent.com> Date: 2017-09-12T14:59:24.000Z 8479 nvmeadm doesn't handle namespaces with EUI64 Reviewed by: Patrick Mooney <patrick.mooney@joyent.com> Reviewed by: Jerry Jelinek <jerry.jelinek@joyent.com> Reviewed by: Yuri Pankov <yuripv@gmx.com> Reviewed by: Toomas Soome <tsoome@me.com> Approved by: Richard Lowe <richlowe@richlowe.net>